tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier4EV-AAAAAAAAAAAAAAAAAAAABg==__AdvancedIlmenite-AAAAAAAAAAAAAAAAAAAKAg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2562,
  "prerequisites": [
    1252
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Get the most out of your Ilmenite by putting the crushed ore into an EV Chemical Bath with Sulfuric Acid. The acid can even be fully recycled.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§a§lAdvanced Ilmenite Processing",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1252
  ],
  "rewards": [],
  "tasks": []
}
