tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier4EV-AAAAAAAAAAAAAAAAAAAABg==__BacktoStep1-AAAAAAAAAAAAAAAAAAAI_g==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2302,
  "prerequisites": [
    2298,
    2300
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The Refined Platinum Salt can be heated to evaporate the last remaining impurities. Now you are left with PMP again, which you can use back in the first step again.\n\n[note]Add an output hatch to the bottom layer of your EBF to capture the Chlorine for reuse.[/note]",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§a§lBack to Step 1",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "CHAIN"
  },
  "required_prerequisites": [
    2298,
    2300
  ],
  "rewards": [],
  "tasks": []
}
