tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier4EV-AAAAAAAAAAAAAAAAAAAABg==__BiggerDrums-AAAAAAAAAAAAAAAAAAAJVw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2391,
  "prerequisites": [
    1474
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Now that you have drums, you want them larger? Already??\n\nWell, in that case, you better start collecting or making cobblestone, by the tens of thousands. And making explosives too.\n\nCompress the cobblestone in an assembler first using circuit 9, then run them through the Implosion Compressor until you get Quadruple Compressed Cobblestone. Do that four times, and then another pass through the assembler with a diamond block, and there you have it - one bedrockium ingot.\n\nNow do that 5 more times, and you can make yourself a bedrockium drum.\n\n64k buckets of portable fluid. Perfect for your new Ore drill!\n\n[note]There's also a Bedrockium ore much later on if you're lazy. By then you probably won't want the drums though.[/note]",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§a§lBigger Drums",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1474
  ],
  "rewards": [],
  "tasks": []
}
