tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier4EV-AAAAAAAAAAAAAAAAAAAABg==__CriticalMaterial-AAAAAAAAAAAAAAAAAAAHYw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1891,
  "prerequisites": [
    186
  ],
  "properties": {
    "auto_claim": false,
    "desc": "For more tungsten and tungstensteel, you'll want scheelite and tungstate. But the most important is desh, found only as small ore elsewhere, and used for the next rocket. Check Y 5-40.\n\n[note]Since there's a good chance you have the MBM by now, you can do the crushed ore task instead of the ore one. This holds for other, similar quests.[/note]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§a§lCritical Materials",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "OR",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    186
  ],
  "rewards": [],
  "tasks": []
}
