tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier4EV-AAAAAAAAAAAAAAAAAAAABg==__CuttingUpStuffat-AAAAAAAAAAAAAAAAAAAH4g==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2018,
  "prerequisites": [
    176
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Now that you've reached EV you're going to need a more advanced cutting machine. Better get one built.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§a§lCutting Up Stuff at EV",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    176
  ],
  "rewards": [],
  "tasks": []
}
